documentation/app/styles/components/component-api.scss
/**
 * Copyright (c) HashiCorp, Inc.
 */

.doc-componentApi {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-areas:
    "name type"
    "default default"
    "values values"
    "description description";
  grid-auto-flow: row;
  gap: 1rem;
  padding: 1.5rem 1rem;
  margin: 0;
  border-bottom: var(--token-form-control-border-width) solid
    var(--token-color-border-primary);
  width: 100%;

  dt {
    font-weight: var(--token-typography-display-100-font-size);
    font-weight: var(--token-typography-font-weight-semibold);
    margin-bottom: 0.5rem;
  }

  dd {
    margin-left: 0;
  }

  .doc-componentApi-name {
    grid-area: name;
  }

  .doc-componentApi-type {
    grid-area: type;
  }

  .doc-componentApi-default {
    grid-area: default;
  }

  .doc-componentApi-values {
    grid-area: values;
  }

  .doc-componentApi-description {
    grid-area: description;
  }
}

